# UimaConllVisualizer

./: .gitignore  CMakeLists.txt  README.md  SimpleEngineConfig.cpp  SimpleEngineConfig.h  main.cpp
ConllReader/: CMakeLists.txt  ConllReader.cpp  ConllReader.h  ConllReader.xml
Visualizer/: CMakeLists.txt  Visualizer.cpp  Visualizer.h  Visualizer.xml  _visualizer_template.html
cmake/: FindUIMA.cmake
examples/: sample.conll
